--- a/app/src/main/res/layout-sw600dp/menuapp.xml
+++ b/app/src/main/res/layout-sw600dp/menuapp.xml
@@ -3,14 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listMenu"
         android:layout_alignTop="@+id/textView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentStart="true">
 
-     />
 
+
+    </GridView>
 </LinearLayout>
