--- a/app/src/main/res/layout/menuapp.xml
+++ b/app/src/main/res/layout/menuapp.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listMenu"
-        android:layout_alignTop="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:id="@+id/listViewLista"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/busqueda" >
 
-        />
+    </ListView>
+
+
+
 
 </LinearLayout>
